--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 		<div id='accordion' style='width:400px;margin:20px 0;'></div>
 		<div id='tabs' style='width:600px;'>
 		</div>
+
+		<div id='menu' class='jtMenu jtWidget' style='margin-top:30px;'></div>
 	</body>
 	<script type="text/javascript" src="./javascripts/jquery-2.0.0.min.js"></script>
 	<script type="text/javascript" src="./javascripts/underscore-min.js"></script>
